--- a/ECommerceApp/Views/_ViewImports.cshtml
+++ b/ECommerceApp/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using ECommerceApp
-@using ECommerceApp.Models
+@using EXommerceApp.Models.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
