- add Unit Of Work - add Areas

--- a/ECommerceApp/Areas/Admin/Views/Category/Index.cshtml
+++ b/ECommerceApp/Areas/Admin/Views/Category/Index.cshtml
@@ -13,7 +13,7 @@
          
         <!--Create new category button-->
         <div class="col-6 text-end">
-            <a asp-area="" asp-controller="Category" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Category
             </a>
         </div>
