--- a/ECommerceApp/Views/Shared/_Layout.cshtml
+++ b/ECommerceApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
+                       <li class="nav-item dropdown">
+                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                   Content Management
+                                 </a>
+                                 <ul class="dropdown-menu">
+                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
+                                     <li><hr class="dropdown-divider"></li>
+                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
+                                 </ul>
+                               </li>
                     </ul>
                 </div>
             </div>
