--- a/ECommerceApp/Areas/Admin/Views/Category/Create.cshtml
+++ b/ECommerceApp/Areas/Admin/Views/Category/Create.cshtml
@@ -31,7 +31,7 @@
                 <!--Buttons-->
                 <div class="row pt-2">
                     <div class="col-6  col-md-3">
-                        <button class="btn btn-primary form-control" type="submit" />Create
+                        <button class="btn btn-primary form-control" type="submit">Create</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a  asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control">
