--- a/ECommerceApp/Views/Shared/_Layout.cshtml
+++ b/ECommerceApp/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/ECommerceApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" >
+    <script src="https://cdn.tiny.cloud/1/o5liyb3ibdnbefs6jnko1q2xyharffxoy1x7glshbsjagfx6/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     
 </head>
 <body>
