--- a/ECommerceApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ECommerceApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ECommerceApp
 @using EXommerceApp.Models.Models
+@using EXommerceApp.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
